2010-03-24  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Eric Carlson.

        [GStreamer] Fails to go to Loaded state because of floating point discrepancies
        https://bugs.webkit.org/show_bug.cgi?id=35891

        Use the m_fillStatus variable, which is more reliable, instead of
        using the calculation, for the completed case.

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::fillTimerFired):

Canonical link: https://commits.webkit.org/47759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56465 268f45cc-cd09-0410-ab3c-d52691b4dbfc